--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -71,7 +71,13 @@
     font-size: 24px;
   }
 
+  .footer-section1{
+    font-size: 18px;
+  }
 
+  .footer-section2{
+    font-size: 16px;
+  }
 
 
 
