--- a/finalproject/css/large.css
+++ b/finalproject/css/large.css
@@ -3,7 +3,7 @@
         display: flex;
         padding: 0;
         grid-column: 4;
-        gap: 1em;
+        
     }
     .navigation li {
         display: block; 
@@ -12,7 +12,15 @@
         text-align: center;
         font-size: 25px;
         margin: 0;
+        background-color: lightgray;
     }
+
+    .navigation a:hover {
+        background-color: #f0f0f0;
+        color: black;
+      }	
+
+
     .navigation li:first-child {
         display: none;
     }
@@ -77,6 +85,37 @@
 
   .footer-section2{
     font-size: 16px;
+  }
+
+  /*--Full-time Missionary Page--*/
+  .suites-banner-title{
+    font-size: 45px;
+  }
+
+  .suite-desc{
+    font-size: 25px;
+    margin: 40px;
+    grid-row: 2;
+  }
+
+  .suites-banner-desc{
+    font-size: 20px;
+  }
+
+  .suite-title1, .suite-title2, .suite-title3{
+    font-size: 40px;
+  }
+
+  /*--Services Page--*/
+
+  .services-img{
+    width: 950px;
+    height: 350px;
+  }
+
+  .amenities-img{
+    width: 950px;
+    height: 350px;
   }
 
 
