--- a/finalproject/css/medium.css
+++ b/finalproject/css/medium.css
@@ -77,7 +77,85 @@
     justify-content: space-between;
     align-items: flex-end;
     text-align: center;
+  }
+
+    /*--Full-time Missionary Page--*/
+
+    .suites-banner-title{
+        font-size: 30px;
+        top: 130px;
+    }
+
+    .suite-title1, .suite-title2, .suite-title3{
+        font-size: 40px;
+      }
+
+    .suite-desc{
+        font-size: 20px;
+        margin: 25px;
+        grid-column: 2;
+        grid-row: 1/3;
+    }
+
+    .suites-form{
+        padding: 30px 100px 30px 100px;
+    }
+
+    .suite-img2{
+        grid-column: 3;
+        grid-row: 2;
+      }
+
+      .suite-title2{
+        grid-column: 3;
+      }
+
+      .suites-banner-desc{
+        font-size: 16px;
+      }
+
+
+    /*--Services Page--*/
+    .services-img{
+        width: 100%;        
+      }
+
+    .services-img-box{
+        text-align: center;
+    }
+
+    .amenities-img-box{
+      text-align: center;
+    }
+
+    .services-title{
+      font-size: 35px;
+    }
+
+    .amenities-title{
+      font-size: 35px;
+    }
+
+    .services ul{
+      font-size: 20px;
+    }
+
+    .amenities ul{
+      font-size: 20px;
+    }
+
+    .link-bar-title{
+      font-size: 30px;
+    }
+
+
+
+
+
 }
+
+
+
 
 
 
