--- a/finalproject/css/small.css
+++ b/finalproject/css/small.css
@@ -51,13 +51,12 @@ header {
 	text-align: right;
 	text-decoration: none;
 	color: black;
-	transition: 0.4s;
+	
 	font-size: 14px;
-	border-radius: 10px;
+	
 }
 
 .navigation a:hover {
-	color: white;
 	background-color: #b8b8b8;
 	
 }	
@@ -437,41 +436,83 @@ option{
 
 
 /*--Services Page--*/
+.services-box{
+    display: grid;
+    gap: 70px;
+    margin: 20px;
+}
+
 .services{
-  position: relative;
-  padding: 25px;
-  
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: #eeeeee;
+}
+
+.services-img{
+  width: 100%;
+
 }
 
 .amenities{
-  position: relative;
-  padding: 25px;
-  
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: #eeeeee;
+  margin-bottom: 5em;
+}
+
+.amenities-img{
+  width: 100%;
+}
+
+.services ul{
+    display: grid;
+    gap: 20px;
+    background: white;
+}
+
+.amenities ul{
+    display: grid;
+    gap: 20px;
+    background: white;
+}
+
+.services-title, .amenities-title{
+  padding: 20px;
+}
+
+.link-bar-title{
+  text-align: center;
+  font-size: 18px;
+  padding: 20px;
 }
 
 .link-bar{
   display: flex;
   justify-content: center;
   gap: 2em;
-  padding: 25px;
   background-color: lightgray; 
 }
 
 .link-bar a{
   text-decoration: none;
   color: black;
+  font-size: 30px;
+  padding: 30px;
 }
 
+
 .link-bar a:hover{
-  color: white;
+  background-color: #eeeeee;
 }
+
+
+
 
 /*--Full-Time Missionary Page--*/
 
 .suites-banner-img{
-  object-fit: cover;
   filter:blur(1.5px);
-  width: 100%;
+  width: 80%;
 }
 
 .suites-banner{
@@ -479,13 +520,9 @@ option{
 }
 
 .suites-banner-title{
-  position: absolute;
-  top: 225px;
-  right: 120px;
-  font-size: 45px;
-  padding: 50px;
+  font-size: 25px;
   background: #ffffffa1;
-  width: 100%;
+  width: auto;
 }
 
 .suites-banner-desc{
@@ -505,7 +542,8 @@ option{
 .suites-form{
   display: flex;
   flex-direction: column;
-  padding: 30px 100px 30px 100px;
+  padding: 30px 30px 30px 30px;
+  margin: 50px;
   border: 1px solid #7e7e7e;
   border-radius: 5px;
   gap: 5px;
@@ -524,4 +562,40 @@ option{
   border-radius: 5px
 }
 
+.suites-box{
+  display: grid;
+  margin: 40px;
+  gap: 3em;
+}
 
+.suites-box .suite1, .suite2, .suite3{
+  display: grid;
+  border: 1px solid lightgray;
+  padding: 50px;
+  background-color: #eeeeee;
+
+}
+
+.suite-title1, .suite-title2, .suite-title3{
+  font-size: 30px;
+}
+
+.suite-img1, .suite-img2, .suite-img3{
+  width: 100%;
+}
+
+.suite-img1, .suite-img3{
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.suite-desc{
+  font-size: 16px;
+  padding: 25px;
+  grid-row: 3;
+  background: white;
+}
+
+.suite-title2{
+  grid-column: 1;
+}
